--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.5.3"
+    "astro": "^4.5.3",
+    "astro-icon": "^1.1.0"
   }
 }
